clusters/observability/apps/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: observability-root:networking.k8s.io/Ingress:observability/grafana
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    cert-manager.io/cluster-issuer: "letsencrypt"
  name: grafana
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.sudocrew.io.vn
      http:
        paths:
          - backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.sudocrew.io.vn
      secretName: grafana-tls
