clusters/observability/apps/ingress/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.sudocrew.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 16686
  spec:
  tls:
    - hosts:
        - jaeger.sudocrew.io.vn
      secretName: jaeger-tls
