clusters/observability/apps/ingress/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: loki.sudocrew.io.vn
      http:
        paths:
          - backend:
              service:
                name: loki
                port:
                  number: 3100
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - loki.sudocrew.io.vn
      secretName: wildcard-cert
