clusters/observability/apps/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.sudocrew.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
  tls:
    - hosts:
        - prometheus.sudocrew.io.vn
      secretName: prometheus-tls
